# Schwarz

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Jenkinsfile  MyStyle.css  Pipfile  README.md  buildenv.lua  qodana.yaml
.config/: dotnet-tools.json
.github/workflows/: lint.yml
.runConfigs/: Backend Auth Server.run.xml  Frontend Dev Server.run.xml
backend/: Pipfile  db.sqlite3  requirements.txt
backend/accounts/: admin.py  models.py  renderers.py  serializers.py  settings.py  urls.py  utils.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/applications/: manage.py
backend/applications/applications/: asgi.py  settings.py  urls.py  wsgi.py
backend/auth/: .env.example  .pre-commit-config.yaml  Auth.fsp  apps.py  auth.fsp  manage.py  pyproject.toml  requirements.txt  schema.graphql  serializers.py  subgraph-config.json  urls.py  views.py
backend/auth/poetry-auth/: pyproject.toml
backend/backend/: settings.py  urls.py
backend/oauth/: manage.py  requirements.txt
backend/schwarz_backend/: apps.py  models.py  settings.py
backend/user_profiles/: db.sqlite3  manage.py
frontend/: index.html  package-lock.json  package.json  relay.config.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.jsx  MyStyle.css  Routes.jsx  environment.jsx  fetchGraphQL.jsx  index.css  index.jsx  main_schema.graphql
frontend/test/: Button.test.js
gateway/: Program.cs  gateway.csproj  gateway.fgp  schema.graphql
gateway/Scalars/: GenericScalar.cs
(+143 files in other folders)
